--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "license": "GPL-3.0",
     "dependencies": {
         "@sponge/three-components": "*",
+        "gsap": "^3.12.1",
         "three": "^0.153.0"
     }
 }
