--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,21 +1,23 @@
 {
-    "name": "@sponge/web",
+    "name": "@sponge/server",
     "version": "1.0.0",
     "description": "",
     "devDependencies": {
         "@sponge/eslint-config-sponge": "*",
+        "@types/express": "^4.17.17",
         "@types/three": "^0.152.1",
+        "nodemon": "^2.0.22",
+        "ts-node": "^10.9.1",
         "vite": "^4.3.9"
     },
     "scripts": {
-        "dev": "vite serve ./src",
+        "dev": "nodemon ./src/index.ts",
         "lint": "eslint **/*.ts"
     },
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
-        "@sponge/three-components": "*",
-        "gsap": "^3.12.1",
-        "three": "^0.153.0"
+        "express": "^4.18.2",
+        "openai": "^3.3.0"
     }
 }
