added react and tailwind

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,3 +1,6 @@
 {
-    "extends": "@sponge/config-ts/tsconfig.base.json"
+    "extends": "@sponge/config-ts/tsconfig.base.json",
+    "compilerOptions": {
+        "jsx": "react-jsx"
+    }
 }
