--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,14 +2,6 @@
     "name": "@sponge/server",
     "version": "1.0.0",
     "description": "",
-    "devDependencies": {
-        "@sponge/eslint-config-sponge": "*",
-        "@types/express": "^4.17.17",
-        "@types/three": "^0.152.1",
-        "nodemon": "^2.0.22",
-        "ts-node": "^10.9.1",
-        "vite": "^4.3.9"
-    },
     "scripts": {
         "dev": "nodemon ./src/index.ts",
         "lint": "eslint **/*.ts"
@@ -19,5 +11,10 @@
     "dependencies": {
         "express": "^4.18.2",
         "openai": "^3.3.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "nodemon": "^2.0.22",
+        "ts-node": "^10.9.1"
     }
 }
