--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,21 +1,23 @@
 {
     "name": "@sponge/web",
     "version": "1.0.0",
-    "description": "",
-    "devDependencies": {
-        "@sponge/eslint-config-sponge": "*",
-        "@types/three": "^0.152.1",
-        "vite": "^4.3.9"
-    },
+    "description": "The web app!",
     "scripts": {
         "dev": "vite serve ./src",
-        "lint": "eslint **/*.ts"
+        "lint": "eslint **/*.{ts,tsx}"
     },
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
-        "@sponge/three-components": "*",
-        "gsap": "^3.12.1",
-        "three": "^0.153.0"
+        "@sponge/three-app": "*"
+    },
+    "devDependencies": {
+        "@sponge/web": "^1.0.0",
+        "@types/react": "^18.2.13",
+        "@types/react-dom": "^18.2.6",
+        "@vitejs/plugin-react": "^4.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "vite": "^4.3.9"
     }
 }
