--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     },
     "devDependencies": {
         "@sponge/config-ts": "*",
-        "@sponge/web": "*",
-        "@types/node": "^20.3.1",
+        "@sponge/eslint-config-sponge": "^1.0.0",
+        "@sponge/web": "^1.0.0",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
         "@typescript-eslint/parser": "^5.59.11",
+        "autoprefixer": "^10.4.14",
         "eslint": "^8.42.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "postcss": "^8.4.24",
         "prettier": "^2.8.8",
+        "tailwindcss": "^3.3.2",
         "typescript": "^5.1.3"
     },
     "engines": {
