--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,10 +9,13 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
+        "@sponge/trpc": "^1.0.0",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "openai": "^3.3.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.1"
