--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,10 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
-        "@sponge/three-app": "*"
+        "@sponge/three-app": "*",
+        "@sponge/trpc": "^1.0.0",
+        "@tanstack/react-query": "^4.29.14",
+        "@trpc/react-query": "^10.31.0"
     },
     "devDependencies": {
         "@sponge/web": "^1.0.0",
@@ -18,6 +21,7 @@
         "@vitejs/plugin-react": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "vite": "^4.3.9"
+        "vite": "^4.3.9",
+        "vite-plugin-environment": "^1.1.3"
     }
 }
