removed black squares under spongebob and patrick

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ UBERDUCK_SECRET=
 OPENAI_KEY=
 OPENAI_ORGANISATION=
 VITE_SERVER_ADDR=
-SERVER_CORS_ADDR=
+# SERVER_CORS_ADDR= # not added, ignore for now
