--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,7 +9,8 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
-        "@sponge/trpc": "^1.0.0",
+        "@sponge/trpc": "*",
+        "@sponge/utils": "^1.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "openai": "^3.3.0"
