--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     },
     "devDependencies": {
         "@sponge/config-ts": "*",
-        "@sponge/eslint-config-sponge": "^1.0.0",
-        "@sponge/web": "^1.0.0",
+        "@sponge/eslint-config-sponge": "*",
+        "@sponge/web": "*",
         "@typescript-eslint/eslint-plugin": "^5.59.11",
         "@typescript-eslint/parser": "^5.59.11",
         "autoprefixer": "^10.4.14",
