plays audio in browser without wav download

--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -9,6 +9,7 @@
     "author": "Jack Wright",
     "license": "ISC",
     "dependencies": {
+        "@sponge/utils": "^1.0.0",
         "@trpc/client": "^10.31.0",
         "@trpc/server": "^10.31.0",
         "zod": "^3.21.4"
