--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,11 +9,13 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
+        "@sponge/socketio": "^1.0.0",
         "@sponge/trpc": "*",
         "@sponge/utils": "^1.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "openai": "^3.3.0"
+        "openai": "^3.3.0",
+        "socket.io": "^4.6.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
