--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,12 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
+        "@sponge/socketio": "^1.0.0",
         "@sponge/three-app": "*",
         "@sponge/trpc": "*",
         "@tanstack/react-query": "^4.29.14",
-        "@trpc/react-query": "^10.31.0"
+        "@trpc/react-query": "^10.31.0",
+        "socket.io-client": "^4.6.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.13",
@@ -20,7 +22,6 @@
         "@vitejs/plugin-react": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "vite": "^4.3.9",
-        "vite-plugin-environment": "^1.1.3"
+        "vite": "^4.3.9"
     }
 }
