--- a/packages/three-app/package.json
+++ b/packages/three-app/package.json
@@ -9,10 +9,12 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
+        "@sponge/socketio": "^1.0.0",
         "@sponge/three-components": "*",
         "@sponge/trpc": "*",
         "@sponge/utils": "*",
         "gsap": "^3.12.1",
+        "socket.io-client": "^4.6.2",
         "three": "^0.153.0"
     },
     "devDependencies": {
