--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,10 @@
         "@sponge/trpc": "*",
         "@tanstack/react-query": "^4.29.14",
         "@trpc/react-query": "^10.31.0",
-        "socket.io-client": "^4.6.2"
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.24",
+        "socket.io-client": "^4.6.2",
+        "tailwindcss": "^3.3.2"
     },
     "devDependencies": {
         "@types/react": "^18.2.13",
