update env example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
+##############################################################
+# Uberduck credentials https://uberduck.ai/                  #
+##############################################################
 UBERDUCK_KEY=
 UBERDUCK_SECRET=
+
+##############################################################
+# OpenAI credentials please see https://platform.openai.com/ #
+##############################################################
 OPENAI_KEY=
 OPENAI_ORGANISATION=
-VITE_SERVER_ADDR=
-# SERVER_CORS_ADDR= # not added, ignore for now
+
+##############################################################
+# URIs                                                       #
+##############################################################
+VITE_SERVER_ADDR=http://localhost:5000
+VITE_WS_ADDR=http://localhost:4000
+SERVER_CORS_ADDR=*
