--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,12 @@
     "author": "Jack Wright",
     "license": "GPL-3.0",
     "dependencies": {
-        "@sponge/socketio": "^1.0.0",
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-regular-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@sponge/react-components": "*",
+        "@sponge/socketio": "*",
         "@sponge/three-app": "*",
         "@sponge/trpc": "*",
         "@tanstack/react-query": "^4.29.14",
