--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "extends": "@sponge/config-ts/tsconfig.base.json",
     "compilerOptions": {
-        "jsx": "react-jsx",
-        "types": ["vite/client"]
+        "types": ["vite/client", "node"]
     }
 }
