--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -2,7 +2,8 @@
     "name": "@sponge/eslint-config-sponge",
     "version": "1.0.0",
     "description": "Common ESLint config.",
-    "main": "index.js",
+    "main": "index.cjs",
+    "type": "module",
     "author": "Jack Wright",
     "license": "GPL-3.0"
 }
