--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sponge/three-components",
+    "name": "@sponge/env",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.ts",
@@ -9,7 +9,10 @@
     },
     "author": "Jack Wright",
     "license": "ISC",
+    "dependencies": {
+        "zod": "^3.21.4"
+    },
     "peerDependencies": {
-        "three": "^0.153.0"
+        "vite": "^4.3.9"
     }
 }
