--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -3,12 +3,14 @@
     "version": "1.0.0",
     "description": "TRPC setup.",
     "main": "./client/index.ts",
+    "type": "module",
     "scripts": {
         "lint": "eslint **/*.ts"
     },
     "author": "Jack Wright",
     "license": "ISC",
     "dependencies": {
+        "@sponge/env": "^1.0.0",
         "@sponge/socketio": "*",
         "@sponge/utils": "*",
         "@trpc/client": "^10.31.0",
@@ -21,5 +23,8 @@
         "@types/express": "^4.17.17",
         "express": "^4.18.2",
         "openai": "^3.3.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.3.1"
     }
 }
