--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "license": "GPL-3.0",
     "workspaces": [
         "apps/*",
-        "packages/*"
+        "services/*",
+        "libs/*"
     ],
     "devDependencies": {
         "@sponge/config-ts": "*",
