--- a/services/three/package.json
+++ b/services/three/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@sponge/three-app",
+    "name": "@sponge/three",
     "version": "1.0.0",
     "description": "",
-    "main": "./src/index.ts",
+    "main": "./src/app.ts",
     "type": "module",
     "scripts": {
         "lint": "eslint **/*.ts"
